@@ -4,6 +4,7 @@ This project is a plugin for "sbt 0.11.x":http://github.com/harrah/xsbt/ providi
 
 h2. Latest changes
 
+* #28: Add skip-parents option
 * #27: Add info message "This might take some time ..." when command starts
 * #24: Switch to sbt 0.11
 
@@ -15,9 +16,9 @@ h2. Installing sbteclipse as a sbt plugin
 * Just add the below lines to your _build.sbt_ file, paying attention to the blank lines:
 
 <pre><code>
-resolvers += Classpaths.typesafeResolver
+resolvers += Classpaths.typesafeSnapshots
 
-addSbtPlugin("com.typesafe.sbteclipse" % "sbteclipse" % "1.4-RC1")
+addSbtPlugin("com.typesafe.sbteclipse" % "sbteclipse" % "1.4.0-SNAPSHOT")
 </code></pre>
 
 h2. Using sbteclipse to create Eclipse project files
